# Finetuning-ESM

./: Dockerfile  environment.yml  gitpush.sh  main.py  pyproject.toml  readme.md  requirements.txt
CAR-T/: models.py  split.py  train.py  train_debug.py  utils.py
CART/: config.py  csv_to_parquet.py  data.py  dummy_data.py  launch.py  lora.py  models.py  optimize_local.py  train_cli.py  train_debug.py  train_local.py
custom_finetune/: custom_data.py  custom_finetune.py  cv.py  metrics.py  model_custom.py  test_eval.py  train_custom.py  train_eval.py
custom_finetune/tensorboard_logs/fold_1/: events.out.tfevents.1744003680.Mukuls-MacBook-Pro.local.88828.0
embeddings/: embeddings.py  esm3_embeddings.json  fetch.py  pipeline.py
finetune/: data.py  finetune.py  model.py  train.py
misc/: combined_pipeline.py  dummydata.py  embeddings_ex.py  ex_fetch.py  ex_fetch_pdb.py  ex_pipeline.py  findpath.py  graph_embedding.py  parse_pdb.py  pdb_features.py  pipeline_graph.py  test.csv  test.py  train_val.csv  visualization.py
