[project]
name = "protein-finetuning-pipeline"
version = "0.1.0"
description = "General-purpose protein finetuning pipeline with support for regression, classification, and LoRA."
authors = [{ name = Mukul Sherekar, email = "mukulsherekar@gmail.com" }]
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "^2.1.0"
transformers = "^4.39.0"
scikit-learn = "^1.3"
numpy = "*"
pandas = "*"
typer = "^0.9"
mlflow = "^2.9"
lightning = "^2.2"
ray = { extras = ["train"], version = "^2.9" }
torchmetrics = "^1.2"

[tool.poetry.scripts]
train-debug = "train_debug:app"
train-model = "train:app"
